@@ -1,3 +1,4 @@
+* BUG#7019 Vérification de la création effective d'un groupe de paiement avant de notifier l'événement
 * BUG#6983 Maintien de l'information "Paiement en attente" sur une quittance annulée
 * BUG#6939 Ajout du champs en invisible de la méthode de traitement sur les groupes de paiement
 * BUG#6707 Correction du calcul du nombre de rejet d'un paiement quand il y a des paiements utilisant des journaux différents
